tests/tests/checks/snapshots/crossref/java/main@package__json.snap
---
source: src/bin/test-index.rs
expression: "&to_value(scil).unwrap()"
input_file: inputs/crossref/java/package__json
---
{
  "symbol_crossref_infos": [
    {
      "symbol": "S_jvm_sample/",
      "crossref_info": {
        "uses": [
          {
            "path": "src/main/java/sample/JavaLibrary.java",
            "path_kind": "normal",
            "lines": [
              {
                "lno": 4,
                "bounds": [
                  8,
                  14
                ],
                "line": "package sample;",
                "context": "",
                "contextsym": ""
              }
            ]
          },
          {
            "path": "src/main/java/sample/Jni.java",
            "path_kind": "normal",
            "lines": [
              {
                "lno": 1,
                "bounds": [
                  8,
                  14
                ],
                "line": "package sample;",
                "context": "",
                "contextsym": ""
              }
            ]
          },
          {
            "path": "src/main/kotlin/sample/InlineObject.kt",
            "path_kind": "normal",
            "lines": [
              {
                "lno": 1,
                "bounds": [
                  8,
                  14
                ],
                "line": "package sample",
                "context": "",
                "contextsym": ""
              }
            ]
          },
          {
            "path": "src/main/kotlin/sample/KotlinLibrary.kt",
            "path_kind": "normal",
            "lines": [
              {
                "lno": 4,
                "bounds": [
                  8,
                  14
                ],
                "line": "package sample",
                "context": "",
                "contextsym": ""
              }
            ]
          },
          {
            "path": "src/test/java/sample/JavaTest.java",
            "path_kind": "test",
            "lines": [
              {
                "lno": 4,
                "bounds": [
                  8,
                  14
                ],
                "line": "package sample;",
                "context": "",
                "contextsym": ""
              }
            ]
          },
          {
            "path": "src/test/kotlin/sample/KotlinTest.kt",
            "path_kind": "test",
            "lines": [
              {
                "lno": 4,
                "bounds": [
                  8,
                  14
                ],
                "line": "package sample",
                "context": "",
                "contextsym": ""
              }
            ]
          }
        ],
        "meta": {
          "structured": 1,
          "pretty": "sample",
          "sym": "S_jvm_sample/",
          "type_pretty": null,
          "kind": "",
          "subsystem": null,
          "implKind": "external",
          "sizeBytes": null,
          "alignmentBytes": null,
          "ownVFPtrBytes": null,
          "bindingSlots": [],
          "ontologySlots": [],
          "supers": [],
          "methods": [],
          "fields": [],
          "overrides": [],
          "props": [],
          "variants": []
        }
      },
      "relation": "Queried",
      "quality": "ExactIdentifier",
      "overloads_hit": []
    }
  ],
  "unknown_symbols": []
}
